fv(SP,PC),header(SP)完了（ロゴの重なり要修正）

--- a/src/index.html
+++ b/src/index.html
@@ -33,21 +33,6 @@
   <script defer src="./assets/js/script.js"></script>
 </head>
 <body>
-  <header class="header">
-    <div class="header__inner">
-      <h1 class="header__logo header-logo">
-        <a href="#" class="header-logo__link">
-          <img src=".assets/images/common/logo-01.svg" alt="ヘッダーロゴ">
-        </a>
-        <!-- /.header-logo__link -->
-      </h1>
-      <!-- /.header__logo header-logo -->
-    </div>
-    <!-- /.header__inner -->
-  </header>
-  <!-- /.header -->
-
-
   <main>
     <!-- FV セクション-->
     <section id="fv" class="fv">
@@ -59,17 +44,17 @@
         </picture>
         <!-- /.fv__image -->
         <div class="fv__main-copy-wrapper">
-          <p class="fv__main-copy fv__main-copy--01">
+          <h2 class="fv__main-copy fv__main-copy--01">
             あなたは知ってる？
-          </p>
+          </h2>
           <!-- /.fv__main-copy--01 -->
-          <p class="fv__main-copy fv__main-copy--02">
+          <h2 class="fv__main-copy fv__main-copy--02">
             蓼科を丸ごと味わう
-          </p>
+          </h2>
           <!-- /.fv__main-copy--01 -->
-          <p class="fv__main-copy fv__main-copy--03">
+          <h2 class="fv__main-copy fv__main-copy--03">
             喜びを
-          </p>
+          </h2>
           <!-- /.fv__main-copy--01 -->
         </div>
         <!-- /.fv__main-copy-wrapper -->
@@ -78,8 +63,36 @@
     </section>
     <!-- /.fv -->
 
+    <!-- ヘッダー -->
+    <header class="header">
+      <div class="header__inner inner">
+        <!-- ヘッダーロゴ -->
+        <h1 class="header__logo header-logo">
+          <a href="#" class="header-logo__link">
+            <img src="./assets/images/common/logo-cow.png" alt="牛の画像">
+          </a>
+          <!-- /.header-logo__link -->
+        </h1>
+        <!-- /.header__logo header-logo -->
+        <!-- ヘッダータイトル -->
+        <div class="header__title header-title">
+          <a href="#" class="header-title__link">
+            <img class="header-title__logo-main" src="./assets/images/common/header-title-sp.png" alt="蓼科ごとう農園">
+            <img class="header-title__logo-sub" src="./assets/images/common/header-title-sp-sub.png" alt="Tateshina Goto Farm">
+          </a>
+          <!-- /.header-title__link -->
+          <!-- /.header-title__main-text -->
+        </div>
+        <!-- /.header-title -->
+      </div>
+      <!-- /.header__inner -->
+    </header>
+    <!-- /.header -->
 
 
+
+
+    <!-- パーツは以下に記述 -->
 
     <!-- セクションタイトル -->
     <div class="section-title">
