--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,55 @@
     </header>
     <!-- /.header -->
 
+    <!-- 蓼科ごとう農園について -->
+    <section id="about" class="about">
+      <div class="about__inner inner">
+        <div class="about__contents-wrapper">
+          <!-- 背景画像 -->
+          <div class="about__image-wrapper">
+            <figure class="about__image-left">
+              <img src="./assets/images/common/about-01.jpg" alt="子供がアルパカに餌をあげている画像">
+            </figure>
+            <figure class="about__image-right">
+              <img src="./assets/images/common/about-02.jpg" alt="馬の親子の画像">
+            </figure>
+          </div>
+          <!-- /.about__image-wrapper -->
+          <div class="about__body">
+            <h2 class="about__main-copy">
+              蓼科の生きた豊かな恵みを、<br class="u-mobile">
+              そのままに
+            </h2>
+            <!-- /.about__main-copy -->
+            <div class="about__text-wrapper">
+              <p class="about__text">
+                「蓼科ごとう農園」は、蓼科の新鮮な農産物を提供するだけでなく、<br class="u-desktop">
+                蓼科の自然環境を大切に守り、後世に残すことを使命としています。<br class="u-desktop">
+                私たちは、農業に従事する者として、<br class="u-desktop">
+                土地や水、空気といった自然環境がもたらす恩恵に感謝し、<br class="u-desktop">
+                その恩恵を受け継ぐ未来の世代にも、<br class="u-desktop">
+                同じような恩恵を受け継ぐことができるよう、<br class="u-desktop">
+                最善を尽くしています。<br class="u-desktop">
+                そのため、私たちは有機農法を導入し、<br class="u-desktop">
+                化学肥料や農薬を極力使用しない栽培方法を取り入れています。<br class="u-desktop">
+                また、自然災害に備え、耕作放棄地の再生や山の植林活動など、<br class="u-desktop">
+                地域の環境保全活動にも積極的に参加しています。<br class="u-desktop">
+                私たちは、「蓼科ごとう農園」を通じて、<br class="u-desktop">
+                蓼科の美しい自然を末永く守り、<br class="u-desktop">
+                地域の豊かな暮らしを支えることを目指しています。
+              </p>
+              <!-- /.about__text -->
+            </div>
+            <!-- /.about__text-wrapper -->
+          </div>
+          <!-- /.about__body -->
+        </div>
+        <!-- /.about__contents-wrapper -->
+      </div>
+      <!-- /.about__inner inner -->
+    </section>
+    <!-- /.about -->
+
 
 
 
