--- a/src/index.html
+++ b/src/index.html
@@ -456,7 +456,7 @@
           </div>
           <!-- /.access__body -->
           <figure class="access__map">
-            <!-- 地図挿入 -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d103202.70352737888!2d138.18905310000167!3d36.06704335001189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601c4e5d08f6a63d%3A0xf7d929f1922a7056!2z5pel5pys44CB44CSMzkxLTAzMDEg6ZW36YeO55yM6IyF6YeO5biC5YyX5bGx!5e0!3m2!1sja!2sth!4v1697132636906!5m2!1sja!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </figure>
           <!-- /.access__map -->
         </div>
@@ -483,7 +483,7 @@
         <!-- /.contact__copy -->
         <div class="contact__form">
           <form action="#" class="contact-form">
-            
+
           </form>
           <!-- /.contact-form -->
         </div>
