--- a/src/index.html
+++ b/src/index.html
@@ -488,28 +488,91 @@
           <!-- /.contact-form -->
         </div>
         <!-- /.contact__form -->
-
-
       </div>
       <!-- /.contact__inner inner -->
     </section>
     <!-- /.contact -->
-
-
-
-
-
-      
-
   </main>
 
+  <!-- フッター -->
   <footer class="footer">
-    <div class="footer__inner">
-      ここにフッターを書く
+    <div class="footer__inner inner">
+      <!-- フッターロゴ -->
+      <h1 class="footer__logo footer-logo">
+        <a href="#" class="footer-logo__link">
+          <img src="./assets/images/common/logo-cow.png" alt="牛の画像">
+        </a>
+        <!-- /.footer-logo__link -->
+      </h1>
+      <!-- /.footer__logo footer-logo -->
+      <!-- フッタータイトル -->
+      <div class="footer__title footer-title">
+        <a href="#" class="footer-title__link">
+          <img class="footer-title__logo-main" src="./assets/images/common/header-title-sp.png" alt="蓼科ごとう農園">
+          <img class="footer-title__logo-sub" src="./assets/images/common/header-title-sp-sub.png" alt="Tateshina Goto Farm">
+        </a>
+        <!-- /.footer-title__link -->
+        <!-- /.footer-title__main-text -->
+      </div>
+      <!-- /.footer-title -->
+      <!-- フッターナビ -->
+      <div class="footer__nav footer-nav">
+        <ul class="footer-nav__items">
+          <li class="footer-nav__item">
+            <a href="#about" class="footer-nav__link">
+              この農園について
+            </a>
+            <!-- /.footer-nav__link -->
+          </li>
+          <!-- /.footer-nav__item -->
+          <li class="footer-nav__item">
+            <a href="#products" class="footer-nav__link">
+              製品一覧
+            </a>
+            <!-- /.footer-nav__link -->
+          </li>
+          <!-- /.footer-nav__item -->
+          <li class="footer-nav__item">
+            <a href="#news" class="footer-nav__link">
+              お知らせ
+            </a>
+            <!-- /.footer-nav__link -->
+          </li>
+          <!-- /.footer-nav__item -->
+          <li class="footer-nav__item">
+            <a href="#faq" class="footer-nav__link">
+              FAQ
+            </a>
+            <!-- /.footer-nav__link -->
+          </li>
+          <!-- /.footer-nav__item -->
+          <li class="footer-nav__item">
+            <a href="#access" class="footer-nav__link">
+              アクセス
+            </a>
+            <!-- /.footer-nav__link -->
+          </li>
+          <!-- /.footer-nav__item -->
+          <li class="footer-nav__item">
+            <a href="#contact" class="footer-nav__link">
+              お問い合わせ
+            </a>
+            <!-- /.footer-nav__link -->
+          </li>
+          <!-- /.footer-nav__item -->
+        </ul>
+        <!-- /.footer-nav__items -->
+      </div>
+      <!-- /.footer__nav footer-nav -->
+      <!-- フッターコピー -->
+      <p class="footer__copyright">
+        ©︎ 2019 GOTONOUEN.
+      </p>
+      <!-- /.footer__copyright -->
+
     </div>
     <!-- /.footer__inner -->
   </footer>
   <!-- /.footer -->
 </body>
-
 </html>
