--- a/src/index.html
+++ b/src/index.html
@@ -69,25 +69,98 @@
 
     <!-- ヘッダー -->
     <header class="header">
-      <div class="header__inner inner">
+      <div class="header__inner">
         <!-- ヘッダーロゴ -->
-        <h1 class="header__logo header-logo">
+        <div class="header__logo header-logo">
           <a href="#" class="header-logo__link">
             <img src="./assets/images/common/logo-cow.png" alt="牛の画像">
           </a>
           <!-- /.header-logo__link -->
-        </h1>
-        <!-- /.header__logo header-logo -->
-        <!-- ヘッダータイトル -->
-        <div class="header__title header-title">
-          <a href="#" class="header-title__link">
-            <img class="header-title__logo-main" src="./assets/images/common/header-title-sp.png" alt="蓼科ごとう農園">
-            <img class="header-title__logo-sub" src="./assets/images/common/header-title-sp-sub.png" alt="Tateshina Goto Farm">
-          </a>
-          <!-- /.header-title__link -->
-          <!-- /.header-title__main-text -->
         </div>
-        <!-- /.header-title -->
+        <!-- /.header__logo header-logo -->
+        <!-- PCナビ -->
+        <nav class="header__nav pc-nav">
+          <ul class="pc-nav__items">
+            <!-- PCナビ（左） -->
+            <li class="pc-nav__item">
+              <div class="pc-nav__left u-desktop">
+                <ul class="pc-nav-left__items">
+                  <li class="pc-nav-left__item">
+                    <a href="#" class="pc-nav-left__link">
+                      この農園について
+                    </a>
+                    <!-- /.pc-nav-left__link -->
+                  </li>
+                  <!-- /.pc-nav-left__item -->
+                  <li class="pc-nav-left__item">
+                    <a href="#" class="pc-nav-left__link">
+                      製品一覧
+                    </a>
+                    <!-- /.pc-nav-left__link -->
+                  </li>
+                  <!-- /.pc-nav-left__item -->
+                  <li class="pc-nav-left__item">
+                    <a href="#" class="pc-nav-left__link">
+                      お知らせ
+                    </a>
+                    <!-- /.pc-nav-left__link -->
+                  </li>
+                  <!-- /.pc-nav-left__item -->
+                </ul>
+                <!-- /.pc-nav-left__items -->
+              </div>
+              <!-- /.pc-nav__left -->
+            </li>
+            <!-- /.pc-nav__item -->
+            <!-- PCナビ（タイトル） -->
+            <li class="pc-nav__item">
+              <!-- ヘッダータイトル -->
+              <div class="header__title header-title">
+                <a href="#" class="header-title__link">
+                  <img class="header-title__logo-main" src="./assets/images/common/header-title-sp.png" alt="蓼科ごとう農園">
+                  <img class="header-title__logo-sub" src="./assets/images/common/header-title-sp-sub.png" alt="Tateshina Goto Farm">
+                </a>
+                <!-- /.header-title__link -->
+                <!-- /.header-title__main-text -->
+              </div>
+              <!-- /.header-title -->
+            </li>
+            <!-- /.pc-nav__item -->
+            <!-- PCナビ（右） -->
+            <li class="pc-nav__item">
+              <div class="pc-nav__right u-desktop">
+                <ul class="pc-nav-right__items">
+                  <li class="pc-nav-right__item">
+                    <a href="#" class="pc-nav-right__link">
+                      FAQ
+                    </a>
+                    <!-- /.pc-nav-right__link -->
+                  </li>
+                  <!-- /.pc-nav-right__item -->
+                  <li class="pc-nav-right__item">
+                    <a href="#" class="pc-nav-right__link">
+                      アクセス
+                    </a>
+                    <!-- /.pc-nav-right__link -->
+                  </li>
+                  <!-- /.pc-nav-right__item -->
+                  <li class="pc-nav-right__item">
+                    <a href="#" class="pc-nav-right__link">
+                      お問い合わせ
+                    </a>
+                    <!-- /.pc-nav-right__link -->
+                  </li>
+                  <!-- /.pc-nav-right__item -->
+                </ul>
+                <!-- /.pc-nav-right__items -->
+              </div>
+              <!-- /.pc-nav__right -->
+            </li>
+            <!-- /.pc-nav__item -->
+          </ul>
+          <!-- /.pc-nav__items -->
+        </nav>
+        <!-- /.header__nav pc-nav -->
       </div>
       <!-- /.header__inner -->
     </header>
