--- a/src/index.html
+++ b/src/index.html
@@ -541,7 +541,7 @@
 
     <!-- お問い合わせ -->
     <section class="contact">
-      <div class="contact__inner inner">
+      <div class="contact__inner">
         <!-- セクションタイトル -->
         <div class="contact__section-title section-title">
           <h2 class="section-title__text">
@@ -554,13 +554,190 @@
           ご購入・販売に関しましては、下記よりお気軽にお問い合わせください。
         </div>
         <!-- /.contact__copy -->
-        <div class="contact__form">
-          <form action="#" class="contact-form">
+        <!-- お問い合わせフォーム -->
 
-          </form>
-          <!-- /.contact-form -->
-        </div>
-        <!-- /.contact__form -->
+        <form action="#" method="post" id="contact-form" class="contact-form" >
+          <p class="contact-form__title">
+            お問い合わせメールフォーム
+          </p>
+          <!-- /.contact-form__title -->
+          <dl class="contact-form__item">
+            <dt>
+              <label class="contact-form__heading">
+                お問い合わせ種類
+                <span>必須</span>
+              </label>
+              <!-- /.contact-form__heading -->
+            </dt>
+            <dd>
+              <!-- ラジオボタンのリスト -->
+              <ul class="contact-form__radio radio__items">
+                <li class="radio__item">
+                  <label for="about-products" class="radio-label radio__text">
+                    <input id="about-products" class="radio-input radio__btn" type="radio" name="radio-name inquiry_type" value="弊社製品について" required>
+                    <span class="radio-label-span">弊社製品について</span>
+                  </label>
+                </li>
+                <!-- /.radio__item -->
+                <li class="radio__item">
+                  <label for="strawberry-pick-up" class="radio-label radio__text">
+                    <input id="strawberry-pick-up" class="radio-input radio__btn" type="radio" name="radio-name inquiry_type" value="いちご狩りについて" required>
+                    <span class="radio-label-span">いちご狩りについて</span>
+                  </label>
+                </li>
+                <!-- /.radio__item -->
+                <li class="radio__item">
+                  <label for="others" class="radio-label radio__text">
+                    <input id="others" class="radio-input radio__btn" type="radio" name="radio-name inquiry_type" value="その他のお問い合わせ" required>
+                    <span class="radio-label-span">その他のお問い合わせ</span>
+                  </label>
+                </li>
+                <!-- /.radio__item -->
+              </ul>
+              <!-- /.contact-form__radio radio__items -->
+            </dd>
+          </dl>
+          <!-- /.contact-form__item -->
+          <!-- 名前 -->
+          <dl class="contact-form__item">
+            <dt>
+              <label for="name" class="contact-form__heading">
+                お名前
+                <span>必須</span>
+              </label>
+              <!-- /.contact-form__heading -->
+            </dt>
+            <dd>
+              <input type="text" id="name" class="input-area" name="name" placeholder="" autocomplete="name">
+              <p class="contact-form__example-text">
+                例：山田　太郎
+              </p><!-- /.contact-form__example-text -->
+              <!-- エラーメッセージ（内容はJSで制御） -->
+              <span class="error_required"></span> 
+              <p class="contact-form__name-error">
+              </p><!-- /.p-contact-form__name-error -->
+            </dd>
+          </dl>
+          <!-- /.contact-form__item -->
+          <!-- 郵便番号 -->
+          <dl class="contact-form__item">
+            <dt>
+              <label for="postal-code" class="contact-form__heading">
+                郵便番号
+              </label>
+              <!-- /.contact-form__heading -->
+            </dt>
+            <dd>
+              <input type="text" id="postal-code" class="input-area" name="name" placeholder="">
+              <p class="contact-form__example-text">
+                例：666-0000
+              </p><!-- /.contact-form__example-text -->
+              <!-- エラーメッセージ（内容はJSで制御） -->
+              <span class="error_required"></span> 
+              <p class="contact-form__postal-code-error">
+              </p><!-- /.p-contact-form__name-error -->
+            </dd>
+          </dl>
+          <!-- /.contact-form__item -->
+          <!-- 住所 -->
+          <dl class="contact-form__item">
+            <dt>
+              <label for="address" class="contact-form__heading">
+                ご住所
+                <span>必須</span>
+              </label>
+              <!-- /.contact-form__heading -->
+            </dt>
+            <dd>
+              <input type="text" id="address" class="input-area" name="name" placeholder="">
+              <p class="contact-form__example-text">
+                例：東京都港区1-1
+              </p><!-- /.contact-form__example-text -->
+              <!-- エラーメッセージ（内容はJSで制御） -->
+              <span class="error_required"></span> 
+              <p class="contact-form__address-error">
+              </p><!-- /.p-contact-form__name-error -->
+            </dd>
+          </dl>
+          <!-- /.contact-form__item -->
+          <!-- メールアドレス -->
+          <dl class="contact-form__item">
+            <dt>
+              <label for="Email" class="contact-form__heading">
+                メールアドレス
+                <span>必須</span>
+              </label>
+              <!-- /.contact-form__heading -->
+            </dt>
+            <dd>
+              <input type="text" id="Email" class="input-area" name="Email" placeholder="" autocomplete="email">
+              <p class="contact-form__example-text">
+                例：aaa@123abcd.com
+              </p><!-- /.contact-form__example-text -->
+              <!-- エラーメッセージ（内容はJSで制御） -->
+              <span class="error_required"></span> 
+              <p class="contact-form__email-error">
+              </p><!-- /.p-contact-form__name-error -->
+            </dd>
+          </dl>
+          <!-- /.contact-form__item -->
+          <!-- 電話番号 -->
+          <dl class="contact-form__item">
+            <dt>
+              <label for="tel" class="contact-form__heading">
+                電話番号
+                <span>必須</span>
+              </label>
+              <!-- /.contact-form__heading -->
+            </dt>
+            <dd>
+              <input type="text" id="tel" class="input-area" name="tel" placeholder="" autocomplete="tel">
+              <p class="contact-form__example-text">
+                例：090-123-4567
+              </p><!-- /.contact-form__example-text -->
+              <!-- エラーメッセージ（内容はJSで制御） -->
+              <span class="error_required"></span> 
+              <p class="contact-form__tel-error">
+              </p><!-- /.p-contact-form__name-error -->
+            </dd>
+          </dl>
+          <!-- /.contact-form__item -->
+          <!-- お問い合わせ内容 -->
+          <dl class="contact-form__item">
+            <dt>
+              <label for="message" class="contact-form__heading">
+                お問い合わせ内容
+                <span>必須</span>
+              </label>
+              <!-- /.contact-form__heading -->
+            </dt>
+            <dd>
+              <textarea id="message" class="input-area" name="message" cols="32" rows="10" placeholder="ここにお問い合わせ内容を書いてください。"></textarea>
+              <span class="error_required"></span> 
+            </dd>
+          </dl>
+          <!-- /.contact-form__item -->
+
+          <!-- プライバシーポリシー -->
+          <div class="contact-form__privacy">
+            <!-- チェックボックス -->
+            <label for="checkbox" class="check-label contact-form__privacy-text">
+              <input id="checkbox" class="check-test checkbox" type="checkbox" name="check-name privacy">
+              <span class="check-label-span">
+                <a href="#" class="contact-form__privacy-link">個人情報保護方針</a>に同意する</span>
+            </label>
+            <!-- チェックボックスに入力がない時のエラーメッセージ -->
+            <!-- テキスト内容はJSで制御 -->
+            <p class="contact-form__privacy-error"></p>
+          </div><!-- /.privacy-policy -->
+          
+          <!-- 送信ボタン -->
+          <div class="contact-form__btn-wrapper">
+            <input type="submit" id="js-submit" class="input-submit contact-form__btn-submit button" value="送信する">
+          </div>
+          <!-- /.contact-form__btn-wrapper -->
+        </form><!-- /.contact-form -->
+        <!-- フォームここまで -->
       </div>
       <!-- /.contact__inner inner -->
     </section>
