FAQのアコーディオン完了

--- a/src/index.html
+++ b/src/index.html
@@ -368,7 +368,7 @@
         <div class="faq__list faq-list">
           <ul class="faq-list__items">
             <li class="faq-list__item">
-              <div class="faq-list__heading">
+              <div class="faq-list__heading js-accordion-Q accordion-title">
                 <p class="faq-list__q">
                   q
                 </p>
@@ -379,14 +379,14 @@
                 <!-- /.faq-list__question -->
               </div>
               <!-- /.faq-list__heading -->
-              <p class="faq-list__text">
+              <p class="faq-list__text accordion-content">
                 冷蔵便に対応しています。その場合別途150円かかります。
               </p>
               <!-- /.faq-list__text -->
             </li>
             <!-- /.faq-list__item -->
             <li class="faq-list__item">
-              <div class="faq-list__heading">
+              <div class="faq-list__heading js-accordion-Q accordion-title">
                 <p class="faq-list__q">
                   q
                 </p>
@@ -397,14 +397,14 @@
                 <!-- /.faq-list__question -->
               </div>
               <!-- /.faq-list__heading -->
-              <p class="faq-list__text">
+              <p class="faq-list__text accordion-content">
                 商品代引きとクレジットカード決済があります。代引き手数料は、10,800円未満で税込330円・10,800円以上32,400円未満で税込440円・32,400円以上102,400円未満で税込660円です。手数料はお客様のご負担となりますのでご了承ください。クレジットカード決済は、JCB・VISA・master・ダイナース・アメリカンエキスプレスのマークが入っているカードすべてご利用になれます。
               </p>
               <!-- /.faq-list__text -->
             </li>
             <!-- /.faq-list__item -->
             <li class="faq-list__item">
-              <div class="faq-list__heading">
+              <div class="faq-list__heading js-accordion-Q accordion-title">
                 <p class="faq-list__q">
                   q
                 </p>
@@ -415,14 +415,14 @@
                 <!-- /.faq-list__question -->
               </div>
               <!-- /.faq-list__heading -->
-              <p class="faq-list__text">
+              <p class="faq-list__text accordion-content">
                 可能です。ラッピングが必要な場合は、購入時にフォームの「ラッピングを希望」にチェックを入れてください。
               </p>
               <!-- /.faq-list__text -->
             </li>
             <!-- /.faq-list__item -->
             <li class="faq-list__item">
-              <div class="faq-list__heading">
+              <div class="faq-list__heading js-accordion-Q accordion-title">
                 <p class="faq-list__q">
                   q
                 </p>
@@ -433,14 +433,14 @@
                 <!-- /.faq-list__question -->
               </div>
               <!-- /.faq-list__heading -->
-              <p class="faq-list__text">
+              <p class="faq-list__text accordion-content">
                 繁忙期（１～３月、GW期間中）の土日祝日は予約はご遠慮いただいておりますが、平日または繁忙期以外の土日祝日はご予約可能です。
               </p>
               <!-- /.faq-list__text -->
             </li>
             <!-- /.faq-list__item -->
             <li class="faq-list__item">
-              <div class="faq-list__heading">
+              <div class="faq-list__heading js-accordion-Q accordion-title">
                 <p class="faq-list__q">
                   q
                 </p>
@@ -451,7 +451,7 @@
                 <!-- /.faq-list__question -->
               </div>
               <!-- /.faq-list__heading -->
-              <p class="faq-list__text">
+              <p class="faq-list__text accordion-content">
                 現在のところ対応できておりません。海外からのご注文で日本国内への発送は承っております。
               </p>
               <!-- /.faq-list__text -->
